Update the README.md
* add description about the program
* add examples how to use the maven to test and build